--- a/index.html
+++ b/index.html
@@ -24,5 +24,12 @@ layout: default
 
 </div>
 --> 
-
-   Hellow world
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+  </head>
+  <body>
+    <center>What is problem with you? and... Why? Ask Why for 6 times.</center>
+  </body>
+</html>
