--- a/index.html
+++ b/index.html
@@ -24,4 +24,6 @@ layout: default
 
 </div>
 --> 
-<center>What is problem with you? and... Why? Ask Why for 6 times.</center>
+
+<style>h1 {position:relative} </style>
+<h1><center>Friend is?</center></h1>
