--- a/index.html
+++ b/index.html
@@ -25,5 +25,15 @@ layout: default
 </div>
 --> 
 
-<style>h1 {position:relative} </style>
-<h1><center>Friend is?</center></h1>
+<body>
+  <script>
+    question = "나는 타인에게 어떻게 기억되고 싶은가"
+    question_eng = "How do I want to be remebered to the other? "
+    answer= prompt (question_eng);
+    document.write(question_eng);
+  </script><br><br>
+  <script>
+    document.write(answer);
+
+  </script>
+</body>
