--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!--
+
 <head>
   <meta charset = "utf-8">
   <title>Susuro</title>
@@ -10,8 +12,7 @@
       }
       #givepadding {
         <!-- padding: 20px;
-        margin: auto;-->
-      <!--ㅋㅋㅋㅋㅋㅋ-->
+        margin: auto;
     }
 
   </style>
@@ -28,3 +29,6 @@
 
   </script>
 </body>
+
+
+-->
