--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body id="target">
   <div class="container">
     <header class = "jumbotron text-center">
-      <img src="kor.png" alt="스스로" class = "img-circle" id="logo">
+      <img src="KOR.png" alt="스스로" class = "img-circle" id="logo">
           <h1><a href="http://www.susuro.cafe">SUSURO</a></h1>
     </header>
     <div class="row">
